Add support for failing tests when a release_assert fails rather than aborting the entire test suite

--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -20,7 +20,8 @@ add_executable (core_test
 	versioning.cpp
 	wallet.cpp
 	wallets.cpp
-	work_pool.cpp)
+	work_pool.cpp
+	testutil.cpp)
 
 target_compile_definitions(core_test
 		PRIVATE
