--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,7 +51,7 @@ Arch Linux:
     FLAVOR: trusty
 
   before_script:
-    - ./util/build_prep/ubuntu/prep.sh
+    - ./util/build_prep/update_common && ./util/build_prep/ubuntu/prep.sh
 
 
 Ubuntu Linux Artful:
@@ -62,7 +62,7 @@ Ubuntu Linux Artful:
     FLAVOR: artful
 
   before_script:
-    - ./util/build_prep/ubuntu/prep.sh
+    - ./util/build_prep/update_common && ./util/build_prep/ubuntu/prep.sh
 
 Ubuntu Linux Xenial:
   <<: *linux_cfg
@@ -72,7 +72,7 @@ Ubuntu Linux Xenial:
     FLAVOR: xenial
 
   before_script:
-    - ./util/build_prep/ubuntu/prep.sh
+    - ./util/build_prep/update_common && ./util/build_prep/ubuntu/prep.sh
 
 Ubuntu Linux Xenial Beta:
   <<: *linux_cfg
@@ -83,7 +83,7 @@ Ubuntu Linux Xenial Beta:
     BETA: 1
 
   before_script:
-    - ./util/build_prep/ubuntu/prep.sh
+    - ./util/build_prep/update_common && ./util/build_prep/ubuntu/prep.sh
 
 Xenial OPTIMIZED:
   <<: *linux_cfg
@@ -94,7 +94,7 @@ Xenial OPTIMIZED:
     SIMD: 1
 
   before_script:
-    - ./util/build_prep/ubuntu/prep.sh
+    - ./util/build_prep/update_common && ./util/build_prep/ubuntu/prep.sh
 
 Artful OPTIMIZED:
   <<: *linux_cfg
@@ -105,7 +105,7 @@ Artful OPTIMIZED:
     SIMD: 1
 
   before_script:
-    - ./util/build_prep/ubuntu/prep.sh
+    - ./util/build_prep/update_common && ./util/build_prep/ubuntu/prep.sh
 
 
 # DISABLED for now
@@ -117,7 +117,7 @@ Artful OPTIMIZED:
     FLAVOR: zesty_asan
 
   before_script:
-    - ./util/build_prep/ubuntu/prep.sh
+    - ./util/build_prep/update_common && ./util/build_prep/ubuntu/prep.sh
 
 
 
@@ -130,7 +130,7 @@ Artful OPTIMIZED:
     FLAVOR: zesty_tsan
 
   before_script:
-    - ./util/build_prep/ubuntu/prep.sh
+    - ./util/build_prep/update_common && ./util/build_prep/ubuntu/prep.sh
 
 
 
