Move out peer container and related types

--- a/rai/node/CMakeLists.txt
+++ b/rai/node/CMakeLists.txt
@@ -32,6 +32,8 @@ add_library (node
 	node.cpp
 	openclwork.cpp
 	openclwork.hpp
+	peers.cpp
+	peers.hpp
 	portmapping.hpp
 	portmapping.cpp
 	rpc.hpp
