--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,10 +30,10 @@ variables:
 Arch Linux:
   <<: *linux_cfg
   stage: build
-  image: pritunl/archlinux:latest
+  image: base/devel:latest
 
   before_script:
-    - pacman --noconfirm -Syu base-devel qt5-tools xorg-server-xvfb clang clang-tools-extra cmake boost boost-libs ninja lsb-release
+    - pacman --noconfirm -Syu qt5-tools xorg-server-xvfb clang clang-tools-extra cmake boost boost-libs ninja lsb-release
 
   script:
     - mkdir -p csa_results/
