--- a/rai/core_test/CMakeLists.txt
+++ b/rai/core_test/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable (core_test
 	processor_service.cpp
 	peer_container.cpp
 	rpc.cpp
+	signing.cpp
 	uint256_union.cpp
 	versioning.cpp
 	wallet.cpp
