Only build essential Boost libraries in Docker (#1507)

--- a/docker/ci/Dockerfile
+++ b/docker/ci/Dockerfile
@@ -1,32 +1,22 @@
 FROM ubuntu:16.04
 
-ENV BOOST_BASENAME=boost_1_66_0 \
-    BOOST_URL=https://netix.dl.sourceforge.net/project/boost/boost/1.66.0/boost_1_66_0.tar.gz
+ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update -qq && apt-get install -yqq \
     build-essential \
     cmake \
     g++ \
-    wget
+    wget \
+    python
 
-WORKDIR "/tmp"
+ENV BOOST_ROOT=/usr/local
+ADD util/build_prep/bootstrap_boost.sh bootstrap_boost.sh
+RUN ./bootstrap_boost.sh -m -B 1.66
+RUN rm bootstrap_boost.sh
 
-RUN wget -qO ${BOOST_BASENAME}.tar.gz ${BOOST_URL} && \
-    tar xzf ${BOOST_BASENAME}.tar.gz && \
-    cd ${BOOST_BASENAME} && \
-    ./bootstrap.sh && \
-    ./b2 -d0 link=static install && \
-    rm -rf ${BOOST_BASENAME} && \
-    rm -f ${BOOST_BASENAME}.tar.gz && \
-    cd ..
-
-
-ENV DEBIAN_FRONTEND=noninteractive
-
-RUN apt-get install -yq \
+RUN apt-get update -qq && apt-get install -yqq \
     qt5-default \
     valgrind \
     xorg xvfb xauth xfonts-100dpi xfonts-75dpi xfonts-scalable xfonts-cyrillic \
     cargo
 
-RUN rm -rf /tmp/*
