Make block uniquer an ctor argument. Rename to unique_factory.

--- a/nano/lib/CMakeLists.txt
+++ b/nano/lib/CMakeLists.txt
@@ -20,7 +20,7 @@ add_library (nano_lib
 	blocks.cpp
 	blocks.hpp
 	config.hpp
-	factory.hpp
+	unique_factory.hpp
 	interface.cpp
 	interface.h
 	jsonconfig.hpp
