Make asan/tsan link on macos, add tsan cache variable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set (NANO_SECURE_RPC OFF CACHE BOOL "")
 
 option(NANO_ASAN_INT "Enable ASan+UBSan+Integer overflow" OFF)
 option(NANO_ASAN "Enable ASan+UBSan" OFF)
+option(NANO_TSAN "Enable TSan" OFF)
 option(NANO_SIMD_OPTIMIZATIONS "Enable CPU-specific SIMD optimizations (SSE/AVX or NEON, e.g.)" OFF)
 
 SET (ACTIVE_NETWORK nano_live_network CACHE STRING "Selects which network parameters are used")
@@ -79,15 +80,15 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 #set(CMAKE_CXX_EXTENSIONS OFF)
 
 if (WIN32)
-	add_definitions(/bigobj)
-endif ()
-
-if (APPLE)
-	set (PLATFORM_LINK_FLAGS "-framework Foundation -framework OpenCL")
-elseif (WIN32)
 	set (PLATFORM_LINK_FLAGS "") 
+	add_definitions(/bigobj)
 else ()
-	set (PLATFORM_LINK_FLAGS "-static-libgcc -static-libstdc++")
+	if (APPLE)
+		set (PLATFORM_LINK_FLAGS "-framework Foundation -framework OpenCL")
+	else ()
+		set (PLATFORM_LINK_FLAGS "-static-libgcc -static-libstdc++")
+	endif ()
+
 	if (NANO_ASAN OR RAIBLOCKS_ASAN)
 		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=address,undefined")
 	elseif (NANO_ASAN_INT OR RAIBLOCKS_ASAN_INT)
