Disable mixed ASM for Clang < 5.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,7 +157,16 @@ if (WIN32)
 					-DCRYPTOPP_DISABLE_AESNI
 					-DCRYPTOPP_DISABLE_CLMUL)
 endif ()
-
+# Some Clang cannot handle mixed asm with positional arguments, where the
+# body is Intel style with no prefix and the templates are AT&T style.
+# See: crypto/cryptopp/config.h
+# Also see https://bugs.llvm.org/show_bug.cgi?id=39895
+if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+	if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 5.0 OR CMAKE_CXX_COMPILER_ID MATCHES "AppleClang")
+		add_definitions(-DCRYPTOPP_DISABLE_MIXED_ASM -DCRYPTOPP_DISABLE_ASM)
+		message("CryptoPP disabled ASM for Clang ${CMAKE_CXX_COMPILER_VERSION}")
+	endif ()
+endif ()
 add_definitions(-DCRYPTOPP_DISABLE_SHANI)
 
 set (CRYPTOPP_LIBRARY cryptopp)
