Use Patch Version to indicate if RC or not. If Patch version == 0 Final Release else RC<Patch> appended

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,6 @@ project (nano-node)
 set (CPACK_PACKAGE_VERSION_MAJOR "18")
 set (CPACK_PACKAGE_VERSION_MINOR "0")
 set (CPACK_PACKAGE_VERSION_PATCH "0")
-if (DEFINED GIT_COMMIT)
-	set (CPACK_PACKAGE_VERSION_PATCH "GIT-${GIT_COMMIT}")
-endif ()
 set (CPACK_PACKAGE_VENDOR "Nano Currency")
 
 set(CMAKE_INSTALL_RPATH "@executable_path/../Frameworks")
@@ -307,7 +304,8 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 	target_compile_definitions(qt
 		PRIVATE
 		-DNANO_VERSION_MAJOR=${CPACK_PACKAGE_VERSION_MAJOR}
-		-DNANO_VERSION_MINOR=${CPACK_PACKAGE_VERSION_MINOR})
+		-DNANO_VERSION_MINOR=${CPACK_PACKAGE_VERSION_MINOR}
+		-DNANO_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH})
 
 	if (WIN32)
 		set (PLATFORM_GUI_TARGET_PROPERTIES WIN32)
