--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -70,4 +70,5 @@ target_link_libraries (node
 target_compile_definitions(node
 	PRIVATE
 		-DNANO_VERSION_MAJOR=${CPACK_PACKAGE_VERSION_MAJOR}
-		-DNANO_VERSION_MINOR=${CPACK_PACKAGE_VERSION_MINOR})
+		-DNANO_VERSION_MINOR=${CPACK_PACKAGE_VERSION_MINOR}
+		-DNANO_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH})
