Make nano_wallet for Windows console

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -341,6 +341,12 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 
 	if (WIN32)
 		target_link_libraries (nano_wallet Qt5::WinExtras)
+		# nano_wallet.com executable for Windows console
+		add_executable(nano_wallet_com
+			nano/nano_wallet/entry_com.cpp)
+		target_link_libraries (nano_wallet_com
+			node)
+		set_target_properties (nano_wallet_com PROPERTIES COMPILE_FLAGS "-DBOOST_ASIO_HAS_STD_ARRAY=1" OUTPUT_NAME "nano_wallet" SUFFIX ".com")
 	endif()
 
 	add_executable (qt_system
@@ -389,6 +395,7 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 		get_target_property (Qt5WindowsPlugin Qt5::QWindowsIntegrationPlugin LOCATION)
 		get_filename_component (Qt5_bin_DIR ${Qt5_DIR}/../../../bin ABSOLUTE)
 		install (TARGETS nano_wallet DESTINATION .)
+		install (TARGETS nano_wallet_com DESTINATION .)
 		install (FILES ${CMAKE_CURRENT_BINARY_DIR}/${WIN_REDIST} DESTINATION .)
 		install (FILES ${Qt5_bin_DIR}/libGLESv2.dll DESTINATION .)
 		install (FILES ${Qt5_bin_DIR}/Qt5Core.dll DESTINATION .)
