Revert "add defines for NANO_MAJOR_MINOR_VERSION and NANO_MAJOR_MINOR_RC_VERSION"
This reverts commit 8c569d631146eba1dd30ca18193bfcdaa6c7e8a6.

--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -27,7 +27,5 @@ target_compile_definitions(core_test
 		PRIVATE
 			-DNANO_VERSION_MAJOR=${CPACK_PACKAGE_VERSION_MAJOR}
 			-DNANO_VERSION_MINOR=${CPACK_PACKAGE_VERSION_MINOR}
-			-DNANO_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH}
-			-DNANO_MAJOR_MINOR_VERSION="${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}"
-			-DNANO_MAJOR_MINOR_RC_VERSION="${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}RC${CPACK_PACKAGE_VERSION_PATCH}")
+			-DNANO_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH})
 target_link_libraries (core_test node secure gtest_main gtest libminiupnpc-static Boost::boost)
