--- a/nano/nano_node/CMakeLists.txt
+++ b/nano/nano_node/CMakeLists.txt
@@ -15,9 +15,7 @@ target_compile_definitions(nano_node
 	PRIVATE
 		-DNANO_VERSION_MAJOR=${CPACK_PACKAGE_VERSION_MAJOR}
 		-DNANO_VERSION_MINOR=${CPACK_PACKAGE_VERSION_MINOR}
-		-DNANO_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH}
-		-DNANO_MAJOR_MINOR_VERSION="${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}"
-		-DNANO_MAJOR_MINOR_RC_VERSION="${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}RC${CPACK_PACKAGE_VERSION_PATCH}")
+		-DNANO_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH})
 
 set_target_properties (nano_node
 	PROPERTIES
