Add .com file to AppVeyor zip archive

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,6 +31,7 @@ after_build:
     cpack -NSIS --verbose
 
     7z a nano.zip %APPVEYOR_BUILD_FOLDER%\Release\*.exe
+    7z a nano.zip %APPVEYOR_BUILD_FOLDER%\Release\*.com
 artifacts:
 - path: nano.zip
   name: nano_release_%network%
