--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,8 +30,7 @@ after_build:
 - cmd: >-
     cpack -NSIS --verbose
 
-    7z a nano.zip %APPVEYOR_BUILD_FOLDER%\Release\*.exe
-    7z a nano.zip %APPVEYOR_BUILD_FOLDER%\Release\*.com
+    7z a nano.zip %APPVEYOR_BUILD_FOLDER%\Release\*.exe %APPVEYOR_BUILD_FOLDER%\Release\*.com
 artifacts:
 - path: nano.zip
   name: nano_release_%network%
