--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,7 @@ after_build:
     [IO.File]::WriteAllBytes($path, [Convert]::FromBase64String($env:CSC_LINK))
     Set-AppveyorBuildVariable -Name 'CSC_LINK' -Value $path
 - cmd: |
-    "C:\Program Files (x86)\Microsoft SDKs\Windows\v7.1A\Bin\signtool.exe" sign /a /ph /tr http://timestamp.digicert.com /td sha256 /fd sha256 /f "%CSC_LINK%" /p "%CSC_KEY_PASSWORD%" "%APPVEYOR_BUILD_FOLDER%/Release/*.exe"
+    "C:\Program Files (x86)\Microsoft SDKs\Windows\v7.1A\Bin\signtool.exe" sign /a /ph /tr http://timestamp.digicert.com /td sha256 /fd sha256 /f "%CSC_LINK%" /p "%CSC_KEY_PASSWORD%" "%APPVEYOR_BUILD_FOLDER%/%CONFIGURATION%/*.exe"
 - ps: Remove-Item env:CSC_KEY_PASSWORD
 - ps: Remove-Item -Path $env:CSC_LINK
 - cmd: >-
