Exclude miniupnpc install ()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,7 +140,7 @@ find_package (Boost 1.66.0 REQUIRED COMPONENTS filesystem log thread program_opt
 add_subdirectory(crypto/ed25519-donna)
 
 set (UPNPC_BUILD_SHARED OFF CACHE BOOL "")
-add_subdirectory (miniupnp/miniupnpc)
+add_subdirectory (miniupnp/miniupnpc EXCLUDE_FROM_ALL)
 # FIXME: This fixes miniupnpc include directories without modifying miniupnpc's
 # CMakeLists.txt but should be set there
 set_target_properties(libminiupnpc-static PROPERTIES INTERFACE_INCLUDE_DIRECTORIES
