--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ else ()
 		add_compile_options(-fsanitize=address,undefined,integer)
 		add_definitions(-DED25519_NO_INLINE_ASM)
 	elseif (NANO_TSAN OR RAIBLOCKS_TSAN)
-		add_compile_options(-fsanitize=thread -fsanitize-blacklist=tsan_blacklist)
+		add_compile_options(-fsanitize=thread "-fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_blacklist")
 		add_definitions(-DED25519_NO_INLINE_ASM)
 	endif()
 
@@ -108,7 +108,7 @@ else ()
 	elseif (NANO_ASAN_INT OR RAIBLOCKS_ASAN_INT)
 		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=address,undefined,integer")
 	elseif (NANO_TSAN OR RAIBLOCKS_TSAN)
-		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=thread -fsanitize-blacklist=tsan_blacklist")
+		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=thread -fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_blacklist")
 	endif()
 endif ()
 
