--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,9 +36,9 @@ after_build:
 - cmd: >-
     cpack -C %CONFIGURATION% --verbose --config ./CPackConfig.cmake
 
-    7z a nano.zip %APPVEYOR_BUILD_FOLDER%\%CONFIGURATION%\*.exe %APPVEYOR_BUILD_FOLDER%\%CONFIGURATION%\*.com
+    cpack -G ZIP -C %CONFIGURATION% --verbose --config ./CPackConfig.cmake
 artifacts:
-- path: nano.zip
+- path: nano*.zip
   name: nano_release_%network%
 - path: Nano_Installer-*.exe
   name: Nano_Installer_%network%
