Instead check if the compiler flag exists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,9 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 #find_package(Threads REQUIRED)
 #set (PLATFORM_LIBS ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS})
 
+include (CheckCXXCompilerFlag)
+check_cxx_compiler_flag (-fsanitize-blacklist COMPILER_SUPPORTS_SANITIZE_BLACKLIST)
+
 if (WIN32)
 	add_definitions(-D_WIN32_WINNT=0x0600
 					-DWINVER=0x0600
@@ -50,9 +53,9 @@ else ()
 		add_definitions(-DED25519_NO_INLINE_ASM)
 	elseif (NANO_TSAN OR RAIBLOCKS_TSAN)
 		add_compile_options(-fsanitize=thread)
-        if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-            add_compile_options("-fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_blacklist")
-        endif()
+		if (COMPILER_SUPPORTS_SANITIZE_BLACKLIST)
+			add_compile_options("-fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_blacklist")
+		endif()
 		add_definitions(-DED25519_NO_INLINE_ASM)
 	endif()
 
@@ -112,9 +115,9 @@ else ()
 		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=address,undefined,integer")
 	elseif (NANO_TSAN OR RAIBLOCKS_TSAN)
 		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=thread")
-        if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-            set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_blacklist")
-        endif()
+		if (COMPILER_SUPPORTS_SANITIZE_BLACKLIST)
+			set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_blacklist")
+		endif()
 	endif()
 endif ()
 
