Didn't work, go back to checking for Clang

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ else ()
 		add_definitions(-DED25519_NO_INLINE_ASM)
 	elseif (NANO_TSAN OR RAIBLOCKS_TSAN)
 		add_compile_options(-fsanitize=thread)
-		if (COMPILER_SUPPORTS_SANITIZE_BLACKLIST)
+		if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 			add_compile_options("-fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_blacklist")
 		endif()
 		add_definitions(-DED25519_NO_INLINE_ASM)
@@ -115,7 +115,7 @@ else ()
 		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=address,undefined,integer")
 	elseif (NANO_TSAN OR RAIBLOCKS_TSAN)
 		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=thread")
-		if (COMPILER_SUPPORTS_SANITIZE_BLACKLIST)
+		if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 			set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_blacklist")
 		endif()
 	endif()
