--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ endif()
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-find_package(Threads REQUIRED)
+find_package(Threads)
 
 if (WIN32)
 	add_definitions(-D_WIN32_WINNT=0x0600
