Reorganizing transport layer files in to their own directory and separating from node classes.

--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -45,16 +45,18 @@ add_library (node
 	rpc.cpp
 	testing.hpp
 	testing.cpp
-	signatures.hpp
+	transport/transport.cpp
+	transport/transport.hpp
+	transport/udp.cpp
+	transport/udp.hpp
 	signatures.cpp
-	wallet.hpp
-	wallet.cpp
-	stats.hpp
+	signatures.hpp
 	stats.cpp
-	udp.cpp
-	udp.hpp
+	stats.hpp
 	voting.hpp
 	voting.cpp
+	wallet.hpp
+	wallet.cpp
 	working.hpp
 	xorshift.hpp)
 
