--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,10 @@ endif()
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
+set(USING_ASAN (NANO_ASAN OR RAIBLOCKS_ASAN))
+set(USING_ASAN_INT (NANO_ASAN_INT OR RAIBLOCKS_ASAN_INT))
+set(USING_TSAN (NANO_TSAN OR RAIBLOCKS_TSAN))
+
 find_package(Threads)
 
 if (WIN32)
@@ -40,13 +44,20 @@ if (WIN32)
 					-D_CRT_SECURE_NO_WARNINGS)
 else ()
 	add_compile_options(-Werror=switch)
-	if (NANO_ASAN OR RAIBLOCKS_ASAN)
-		add_compile_options(-fsanitize=address,undefined)
+
+	if ((${USING_TSAN} AND ${USING_ASAN}) OR
+	    (${USING_TSAN} AND ${USING_ASAN_INT}))
+		message (WARNING "Cannot use TSAN/ASAN together, defaulting to ASAN")
+	endif()
+
+	if (${USING_ASAN} OR ${USING_ASAN_INT})
+		if (${USING_ASAN})
+			add_compile_options(-fsanitize=address,undefined)
+		else ()	
+			add_compile_options(-fsanitize=address,undefined,integer)
+		endif()
 		add_definitions(-DED25519_NO_INLINE_ASM)
-	elseif (NANO_ASAN_INT OR RAIBLOCKS_ASAN_INT)
-		add_compile_options(-fsanitize=address,undefined,integer)
-		add_definitions(-DED25519_NO_INLINE_ASM)
-	elseif (NANO_TSAN OR RAIBLOCKS_TSAN)
+	elseif (${USING_TSAN})
 		add_compile_options(-fsanitize=thread)
 		if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 			add_compile_options("-fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_blacklist")
@@ -104,11 +115,11 @@ else ()
 		set (PLATFORM_LINK_FLAGS "-static-libgcc -static-libstdc++")
 	endif ()
 
-	if (NANO_ASAN OR RAIBLOCKS_ASAN)
+	if (${USING_ASAN})
 		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=address,undefined")
-	elseif (NANO_ASAN_INT OR RAIBLOCKS_ASAN_INT)
+	elseif (${USING_ASAN_INT})
 		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=address,undefined,integer")
-	elseif (NANO_TSAN OR RAIBLOCKS_TSAN)
+	elseif (${USING_TSAN})
 		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=thread")
 		if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 			set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_blacklist")
