Prioritise ASAN_INT if ASAN is also used

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,10 +51,10 @@ else ()
 	endif()
 
 	if (${USING_ASAN} OR ${USING_ASAN_INT})
-		if (${USING_ASAN})
-			add_compile_options(-fsanitize=address,undefined)
-		else ()	
+		if (${USING_ASAN_INT})
 			add_compile_options(-fsanitize=address,undefined,integer)
+		else ()	
+			add_compile_options(-fsanitize=address,undefined)
 		endif()
 		add_definitions(-DED25519_NO_INLINE_ASM)
 	elseif (${USING_TSAN})
@@ -115,10 +115,10 @@ else ()
 		set (PLATFORM_LINK_FLAGS "-static-libgcc -static-libstdc++")
 	endif ()
 
-	if (${USING_ASAN})
-		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=address,undefined")
-	elseif (${USING_ASAN_INT})
+	if (${USING_ASAN_INT})
 		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=address,undefined,integer")
+	elseif (${USING_ASAN})
+		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=address,undefined")
 	elseif (${USING_TSAN})
 		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=thread")
 		if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
