--- a/nano/nano_node/CMakeLists.txt
+++ b/nano/nano_node/CMakeLists.txt
@@ -1,9 +1,9 @@
-add_executable (nano_node
+add_executable (bananode
 	daemon.cpp
 	daemon.hpp
 	entry.cpp)
 
-target_link_libraries (nano_node
+target_link_libraries (bananode
 	node
 	secure
 	argon2
@@ -11,19 +11,19 @@ target_link_libraries (nano_node
 	${PLATFORM_LIBS}
 )
 
-target_compile_definitions(nano_node
+target_compile_definitions(bananode
 	PRIVATE
 		-DNANO_VERSION_MAJOR=${CPACK_PACKAGE_VERSION_MAJOR}
 		-DNANO_VERSION_MINOR=${CPACK_PACKAGE_VERSION_MINOR}
 		-DNANO_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH})
 
-set_target_properties (nano_node
+set_target_properties (bananode
 	PROPERTIES
 		COMPILE_FLAGS
 			"-DQT_NO_KEYWORDS -DBOOST_ASIO_HAS_STD_ARRAY=1")
 
 if ((NANO_GUI OR RAIBLOCKS_GUI) AND NOT APPLE)
-	install(TARGETS nano_node
+	install(TARGETS bananode
 			RUNTIME DESTINATION bin
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib
