--- a/Info.plist.in
+++ b/Info.plist.in
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleIconFile</key>
-	<string>Nano.icns</string>
+	<string>Banano.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.nano.nano_wallet</string>
 	<key>CFBundleShortVersionString</key>
