--- a/.gitmodules
+++ b/.gitmodules
@@ -16,5 +16,5 @@
 	url = https://github.com/Cyan4973/xxHash.git
 [submodule "gtest"]
 	path = gtest
-	url = git@github.com:google/googletest.git
+	url = https://github.com/google/googletest.git
 	branch = v1.8.x
