--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -317,6 +317,50 @@ if (NANO_TEST OR RAIBLOCKS_TEST)
 	add_subdirectory(nano/slow_test)
 endif ()
 
+	add_subdirectory(nano/rpc)
+
+	add_executable (nano_rpc
+		nano/nano_rpc/entry.cpp)
+
+	target_link_libraries (nano_rpc
+		rpc
+		secure
+		Boost::filesystem
+		Boost::log
+		Boost::log_setup
+		Boost::program_options
+		Boost::system
+		Boost::thread
+		Boost::boost)
+
+target_compile_definitions(nano_rpc
+	PUBLIC
+		-DACTIVE_NETWORK=${ACTIVE_NETWORK}
+	PRIVATE
+		-DNANO_VERSION_MAJOR=${CPACK_PACKAGE_VERSION_MAJOR}
+		-DNANO_VERSION_MINOR=${CPACK_PACKAGE_VERSION_MINOR}
+		-DNANO_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH}
+)
+
+	if (NANO_TEST OR RAIBLOCKS_TEST)
+		add_executable (rpc_test
+			nano/rpc_test/entry.cpp
+			nano/rpc_test/rpc.cpp)
+
+		target_link_libraries(rpc_test gtest gtest_main rpc node)
+
+		set_target_properties (rpc_test PROPERTIES COMPILE_FLAGS "-DBOOST_ASIO_HAS_STD_ARRAY=1")
+		target_compile_definitions(rpc_test
+			PUBLIC
+				-DACTIVE_NETWORK=${ACTIVE_NETWORK}
+			PRIVATE
+				-DNANO_VERSION_MAJOR=${CPACK_PACKAGE_VERSION_MAJOR}
+				-DNANO_VERSION_MINOR=${CPACK_PACKAGE_VERSION_MINOR}
+				-DNANO_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH}
+		)
+	endif ()
+
+
 if (NANO_GUI OR RAIBLOCKS_GUI)
 	if (WIN32)
 		set (PLATFORM_QT_PACKAGES WinExtras)
