Move dependency of secure lib from nano lib, hopefully fixes build error on travis linux

--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable (core_test
 	processor_service.cpp
 	peer_container.cpp
 	signing.cpp
+	testutil.hpp
 	timer.cpp
 	uint256_union.cpp
 	versioning.cpp
