--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -76,8 +76,7 @@ target_link_libraries (node
 	Boost::system
 	Boost::thread
 	Boost::boost
-	${CMAKE_DL_LIBS}
-	)
+	${CMAKE_DL_LIBS})
 
 target_compile_definitions(node
 	PRIVATE
