Fix circular dependencies with nano lib and ed25519

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -288,6 +288,7 @@ add_library (blake2
 
 target_compile_definitions(blake2 PRIVATE -D__SSE2__)
 
+add_subdirectory(nano/crypto_lib)
 add_subdirectory(nano/secure)
 add_subdirectory(nano/lib)
 add_subdirectory(nano/node)
@@ -425,7 +426,7 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 	add_executable (qt_system
 		nano/qt_system/entry.cpp)
 
-	target_link_libraries (qt_system qt node Qt5::Gui Qt5::Widgets)
+	target_link_libraries (qt_system qt node crypto_lib Qt5::Gui Qt5::Widgets)
 
 	set_target_properties (qt nano_wallet qt_system PROPERTIES COMPILE_FLAGS "-DQT_NO_KEYWORDS -DBOOST_ASIO_HAS_STD_ARRAY=1")
 
