Add RPC test to travis and fix other dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -411,7 +411,9 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 
 	target_link_libraries (nano_wallet
 		node
-		qt)
+		qt
+		ed25519
+		crypto_lib)
 
 	if (WIN32)
 		target_link_libraries (nano_wallet Qt5::WinExtras)
@@ -426,7 +428,7 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 	add_executable (qt_system
 		nano/qt_system/entry.cpp)
 
-	target_link_libraries (qt_system qt node crypto_lib Qt5::Gui Qt5::Widgets)
+	target_link_libraries (qt_system qt node ed25519 crypto_lib Qt5::Gui Qt5::Widgets)
 
 	set_target_properties (qt nano_wallet qt_system PROPERTIES COMPILE_FLAGS "-DQT_NO_KEYWORDS -DBOOST_ASIO_HAS_STD_ARRAY=1")
 
