--- a/nano/slow_test/CMakeLists.txt
+++ b/nano/slow_test/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable (slow_test
 	node.cpp)
 
-target_link_libraries (slow_test node secure gtest_main gtest crypto_lib libminiupnpc-static Boost::boost)
+target_link_libraries (slow_test node secure gtest_main gtest ed25519 crypto_lib libminiupnpc-static Boost::boost)
