Fixed asio data races communicating with IPC, update load tester rust script to connect with IPC server correctly

--- a/nano/rpc/CMakeLists.txt
+++ b/nano/rpc/CMakeLists.txt
@@ -1,10 +1,12 @@
 add_library (rpc
-	rpc.cpp
 	rpc.hpp
-	rpc_connection.cpp
+	rpc.cpp
 	rpc_connection.hpp
+	rpc_connection.cpp
+	rpc_handler.hpp
 	rpc_handler.cpp
-	rpc_handler.hpp)
+	rpc_request_processor.hpp
+	rpc_request_processor.cpp)
 
 target_link_libraries (rpc
 	nano_lib)
