Add support for secure RPC

--- a/nano/rpc/CMakeLists.txt
+++ b/nano/rpc/CMakeLists.txt
@@ -1,4 +1,9 @@
+if (NANO_SECURE_RPC OR RAIBLOCKS_SECURE_RPC)
+	set (secure_rpc_sources rpc_secure.cpp rpc_secure.hpp)
+endif ()
+
 add_library (rpc
+	${secure_rpc_sources}
 	rpc.hpp
 	rpc.cpp
 	rpc_connection.hpp
@@ -9,4 +14,6 @@ add_library (rpc
 	rpc_request_processor.cpp)
 
 target_link_libraries (rpc
-	nano_lib)
+	nano_lib
+	${OPENSSL_LIBRARIES}
+	Boost::boost)
